--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -55,7 +55,7 @@
   [sort]="facade.tableSorting?.()"
   [pageSizeOptions]="tableStructure.pageSizeOptions || []"
   [paginationVisibility]="tableStructure.paginationVisibility"
-  [filterCriteria]="filterCriteria()"
+  [filterCriteria]="facade.filterCriteria?.() || {}"
   [filterPredicate]="facade.tableFilterPredicate"
   [actions]="tableStructure.actions || {}"
   [extraRowStyles]="tableStructure.extraRowStyles"
