--- a/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
+++ b/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
@@ -1,6 +1,6 @@
 <button mat-flat-button color="accent" class="text-white w-max m-tiny px-sub py-tiny">
   <div class="flex flex-row items-center justify-center gap-sm">
-    <p class="hidden md:block">
+    <p class="hidden lg:block">
       {{ orderListStore.currentOrder()?.name || 'Cap comanda oberta' }}
     </p>
 
