--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -48,7 +48,8 @@
                 }
                 <input
                   matInput
-                  [value]="row[column.key] || 0"
+                  cdkFocusInitial
+                  [value]="row[column.key]"
                   [attr.type]="extras?.type || 'text'"
                   [attr.min]="extras?.min || 0"
                   [attr.max]="extras?.max || 100"
