feat(llecoop/order-list/list): #423 add totals prices for user order detail form
ISSUES CLOSED: #423

--- a/libs/core/styles/util/material/src/_input.scss
+++ b/libs/core/styles/util/material/src/_input.scss
@@ -7,4 +7,16 @@
 
 formly-field {
   width: 100%;
+
+  .input-with-enabled-appearance .mdc-text-field--disabled {
+    --mdc-filled-text-field-disabled-label-text-color: var(
+      --mdc-filled-text-field-input-text-color
+    );
+    --mdc-filled-text-field-disabled-input-text-color: var(
+      --mdc-filled-text-field-input-text-color
+    );
+    --mdc-filled-text-field-disabled-placeholder-text-color: var(
+      --mdc-filled-text-field-input-text-color
+    );
+  }
 }
