feat(llecoop/user-order/detail): #411 add edit user order
ISSUES CLOSED: #411

--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -139,10 +139,10 @@
 <ng-template #h1Tpl>
   @if (headerConfig.mainIcon; as icon) {
     <div class="flex items-center justify-center gap-sub">
-      <svg-icon class="hidden sm:block" [src]="icon.iconPath" [svgClass]="icon.svgClass"></svg-icon>
+      <svg-icon [src]="icon.iconPath" [svgClass]="icon.svgClass"></svg-icon>
 
       <span class="block text-md sm:hidden">{{ headerTitle }}</span>
-      <span class="hidden text-sm sm:block">{{ headerConfig.extendedTitle || headerTitle }}</span>
+      <span class="hidden sm:block">{{ headerConfig.extendedTitle || headerTitle }}</span>
     </div>
   }
 </ng-template>
