--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -1,22 +1,23 @@
-<div class="block mt-0 overflow-auto border-t border-solid md:mt-4 border-gray-10 table-wrapper">
+<div
+  class="z-10 block mt-0 overflow-auto border-t border-solid md:mt-4 border-gray-10 table-wrapper">
   <mat-table
     class="table w-full table-fixed"
     matSort
     matSortDisableClear
     [dataSource]="dataSource"
-    [attr.aria-label]="caption"
+    [attr.aria-label]="caption()"
     [matSortActive]="matSort?.active || ''"
     [matSortDirection]="matSort?.direction || ''"
     (matSortChange)="onChangeSorting($event)">
-    @if (caption) {
+    @if (caption()) {
       <caption class="sr-only">
         {{
-          caption
+          caption()
         }}
       </caption>
     }
 
-    @for (column of columnProperties; track column.key) {
+    @for (column of columnProperties(); track column.key) {
       <ng-container [matColumnDef]="column.key" [sticky]="column.sticky">
         <mat-header-cell
           *matHeaderCellDef
@@ -48,7 +49,6 @@
                 }
                 <input
                   matInput
-                  cdkFocusInitial
                   [value]="row[column.key]"
                   [attr.type]="extras?.type || 'text'"
                   [attr.min]="extras?.min || 0"
@@ -72,13 +72,13 @@
     }
 
     <!-- Actions column -->
-    @if (actions) {
+    @if (actions()) {
       <ng-container matColumnDef="actions">
         <mat-header-cell
           *matHeaderCellDef
           class="flex mat-cell-actions gap-sub min-w-fit"></mat-header-cell>
         <mat-cell *matCellDef="let element" class="flex mat-cell-actions gap-sub min-w-fit">
-          @for (action of actions | keyvalue | orderTableActionsElements; track action.key) {
+          @for (action of actions() | keyvalue | orderTableActionsElements; track action.key) {
             @if (action.key === 'EDIT') {
               <button
                 type="button"
@@ -117,27 +117,27 @@
       </ng-container>
     }
 
-    <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+    <mat-header-row *matHeaderRowDef="displayedColumns(); sticky: true"></mat-header-row>
     <mat-row
-      *matRowDef="let row; columns: displayedColumns"
+      *matRowDef="let row; columns: displayedColumns()"
       class="even:bg-gray-5 odd:bg-white"
-      [ngClass]="extraRowStyles?.(row) || ''"></mat-row>
+      [ngClass]="extraRowStyles()?.(row) || ''"></mat-row>
   </mat-table>
 
   @if (!noPagination) {
     <mat-paginator
       #matPaginator
       class="mt-md jus"
-      [hidePageSize]="paginationVisibility?.hidePageSize"
+      [hidePageSize]="paginationVisibility()?.hidePageSize"
       [length]="resultsLength"
       [ngClass]="{
-        'paginator--hide': paginationVisibility?.hideRangeLabel,
-        'paginator--hide-range-buttons': paginationVisibility?.hideRangeButtons,
+        'paginator--hide': paginationVisibility()?.hideRangeLabel,
+        'paginator--hide-range-buttons': paginationVisibility()?.hideRangeButtons,
       }"
-      [pageIndex]="pagination?.pageIndex || 0"
-      [pageSize]="pagination?.pageSize || resultsLength"
-      [pageSizeOptions]="pageSizeOptions"
-      [showFirstLastButtons]="!paginationVisibility?.hidePaginationFirstLastButtons"
+      [pageIndex]="pagination()?.pageIndex || 0"
+      [pageSize]="pagination()?.pageSize || resultsLength"
+      [pageSizeOptions]="pageSizeOptions()"
+      [showFirstLastButtons]="!paginationVisibility()?.hidePaginationFirstLastButtons"
       (page)="onChangePagination($event)">
     </mat-paginator>
   }
