--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -8,8 +8,8 @@
     <span>{{ viewConfig.title | titlecase }}</span>
   </h2>
 
-  @if (viewExtraActions.length) {
-    <div class="flex flex-row items-center justify-end gap-sm">
+  <div class="flex flex-row items-center justify-end gap-sm">
+    @if (viewExtraActions.length) {
       @for (action of viewExtraActions; track action) {
         @if (action.type === 'button') {
           <button
@@ -29,17 +29,11 @@
           </div>
         }
       }
-
-      <button
-        type="button"
-        mat-flat-button
-        color="accent"
-        class="text-white"
-        [routerLink]="['../']">
-        <mat-icon>arrow_back</mat-icon> Tornar al llistat
-      </button>
-    </div>
-  }
+    }
+    <button type="button" mat-flat-button color="accent" class="text-white" [routerLink]="['../']">
+      <mat-icon>arrow_back</mat-icon> Tornar al llistat
+    </button>
+  </div>
 </div>
 <plastik-shared-form-feature
   class="block w-full"
