--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -1,6 +1,6 @@
 @let routingToDetailPage = facade.routingToDetailPage();
 @let viewConfig = facade.viewConfig();
-@let tableStructure = facade.tableStructure();
+@let tableDefinition = facade.tableDefinition();
 @let viewExtraActions = facade.viewExtraActions?.() || [];
 
 <div
@@ -48,18 +48,18 @@
 </plastik-shared-form-feature>
 
 <plastik-shared-table
-  [data]="facade.tableData()"
-  [caption]="tableStructure.caption || ''"
-  [columnProperties]="tableStructure.columnProperties || []"
-  [resultsLength]="facade.count() || 0"
-  [sort]="facade.tableSorting?.()"
-  [pageSizeOptions]="tableStructure.pageSizeOptions || []"
-  [paginationVisibility]="tableStructure?.paginationVisibility"
+  [data]="tableDefinition.getData?.() || []"
+  [caption]="tableDefinition.caption || ''"
+  [columnProperties]="tableDefinition.columnProperties || []"
+  [resultsLength]="tableDefinition?.count() || 0"
+  [sort]="tableDefinition.sort?.()"
+  [pageSizeOptions]="tableDefinition.pageSizeOptions || []"
+  [paginationVisibility]="tableDefinition?.paginationVisibility"
   [filterCriteria]="facade.filterCriteria?.() || {}"
   [filterPredicate]="facade.tableFilterPredicate"
-  [actions]="tableStructure.actions || {}"
-  [extraRowStyles]="tableStructure.extraRowStyles"
+  [actions]="tableDefinition.actions || {}"
+  [noPagination]="tableDefinition.noPagination || false"
+  [extraRowStyles]="tableDefinition.extraRowStyles"
   (changeSorting)="onChangeSorting($event)"
-  (getData)="onGetData($event)"
   (delete)="onDelete($event)">
 </plastik-shared-table>
