--- a/libs/shared/form/ui/table/src/lib/input-table-type.component.html
+++ b/libs/shared/form/ui/table/src/lib/input-table-type.component.html
@@ -1,11 +1,14 @@
+@let tableDefinition = props.tableDefinition();
+@let data = tableDefinition.getData?.() || [];
+
 <plastik-input-table
-  [tableCaption]="props.tableStructure().caption || ''"
-  [tableColumnProperties]="props.tableStructure().columnProperties || []"
-  [tableActions]="props.tableStructure().actions || {}"
-  [tableSorting]="props.tableStructure().sort"
-  [tableExtraRowStyles]="props.tableStructure().extraRowStyles"
-  [tableData]="props.tableData()"
-  [tableDataLength]="props.tableData().length"
+  [tableCaption]="tableDefinition.caption || ''"
+  [tableColumnProperties]="tableDefinition.columnProperties || []"
+  [tableActions]="tableDefinition.actions || {}"
+  [tableSorting]="tableDefinition?.sort()"
+  [tableExtraRowStyles]="tableDefinition.extraRowStyles"
+  [tableData]="data || []"
+  [tableDataLength]="data.length"
   [formControl]="formControl"
   [formlyAttributes]="field"
   [tableRowValueConditionFn]="props.tableRowValueConditionFn"
