--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -41,30 +41,88 @@
                 (keyup)="onGetRoute($event)"></div>
             }
             @case ('INPUT') {
-              <mat-form-field class="inline" [ngClass]="column.cssClasses?.[1] || ''">
-                @let extras = column.formatting.extras?.(row);
+              @if (column.isEditableConfig?.(row); as editable) {
+                @let attributes = editable?.attributes;
+                <mat-form-field
+                  #matFormField
+                  class="inline editable"
+                  [ngClass]="attributes?.styles || ''">
+                  @if (attributes?.prefix) {
+                    <span matTextPrefix>{{ attributes?.prefix }}</span>
+                  }
 
-                @if (extras?.prefix) {
-                  <span matTextPrefix>{{ extras?.prefix }}</span>
-                }
-                <input
-                  matInput
-                  [value]="row[column.key]"
-                  [attr.type]="extras?.type || 'text'"
-                  [attr.min]="extras?.min || 0"
-                  [attr.max]="extras?.max || 100"
-                  [attr.step]="extras?.step || 1"
-                  [placeholder]="extras?.placeholder || ''"
-                  (change)="onChangeInput($event, row, column.formatting)" />
-                @if (extras?.suffix) {
-                  <span matTextSuffix>{{ extras?.suffix }}</span>
-                }
-              </mat-form-field>
+                  @if (isText(editable)) {
+                    <input
+                      matInput
+                      [value]="row[column.key]"
+                      [placeholder]="editable.attributes.placeholder || ''"
+                      (change)="onInputChange($event, row, editable)" />
+                  }
+
+                  @if (isNumber(editable)) {
+                    <input
+                      matInput
+                      type="number"
+                      [value]="row[column.key]"
+                      [attr.min]="editable.attributes.min || 0"
+                      [attr.max]="editable.attributes.max || 100"
+                      [attr.step]="editable.attributes.step || 1"
+                      [placeholder]="editable.attributes.placeholder || ''"
+                      (change)="onInputChange($event, row, editable)" />
+                  }
+
+                  @if (isSelect(editable)) {
+                    <mat-select
+                      [value]="row[column.key]"
+                      [multiple]="editable.attributes.multiple || false"
+                      (selectionChange)="onInputChange($event, row, editable)">
+                      @for (option of editable.attributes.options; track option.value) {
+                        <mat-option [value]="option.value">
+                          {{ option.label }}
+                        </mat-option>
+                      }
+                    </mat-select>
+                  }
+
+                  @if (isCheckBox(editable)) {
+                    <mat-checkbox
+                      [value]="row[column.key]"
+                      [checked]="editable.attributes.checked || false"
+                      (change)="onInputChange($event, row, editable)"></mat-checkbox>
+                  }
+
+                  @if (isRadio(editable)) {
+                    <mat-radio-group
+                      [value]="row[column.key]"
+                      (change)="onInputChange($event, row, editable)">
+                      @for (option of editable.attributes.options; track option.value) {
+                        <mat-radio-button [value]="option.value">
+                          {{ option.label }}
+                        </mat-radio-button>
+                      }
+                    </mat-radio-group>
+                  }
+
+                  @if (isTextarea(editable)) {
+                    <textarea
+                      matInput
+                      [value]="row[column.key]"
+                      [placeholder]="editable.attributes.placeholder || ''"
+                      [rows]="editable.attributes.rows || 2"
+                      (change)="onInputChange($event, row, editable)"></textarea>
+                  }
+
+                  @if (attributes?.suffix) {
+                    <span matTextSuffix>{{ attributes?.suffix }}</span>
+                  }
+                </mat-form-field>
+              }
             }
+
             @default {
               <div
                 [ngClass]="column.cssClasses?.[1] || ''"
-                [innerHTML]="row | safeFormatted: column : i + 1 : pagination"></div>
+                [innerHTML]="row | safeFormatted: column : i + 1 : pagination()"></div>
             }
           }
         </mat-cell>
@@ -88,6 +146,16 @@
                 [matTooltip]="action.value?.description(element) || ''"
                 [disabled]="action.value?.disabled ? action.value?.disabled(element) : false">
                 <mat-icon class="mat-primary">edit</mat-icon>
+              </button>
+            } @else if (action.value?.visible(element) && action.value?.type === 'input') {
+              <button
+                type="button"
+                mat-icon-button
+                [attr.aria-label]="action.value?.description(element) || ''"
+                [matTooltip]="action.value?.description(element) || ''"
+                [disabled]="action.value?.disabled ? action.value?.disabled(element) : false"
+                (click)="getChangedData.emit(action.value?.execute(element))">
+                <mat-icon class="mat-warn">delete</mat-icon>
               </button>
             } @else if (action.key === 'DELETE' && action.value?.visible(element)) {
               <button
@@ -124,18 +192,18 @@
       [ngClass]="extraRowStyles()?.(row) || ''"></mat-row>
   </mat-table>
 
-  @if (!noPagination) {
+  @if (!noPagination()) {
     <mat-paginator
       #matPaginator
       class="mt-md jus"
       [hidePageSize]="paginationVisibility()?.hidePageSize"
-      [length]="resultsLength"
+      [length]="resultsLength()"
       [ngClass]="{
         'paginator--hide': paginationVisibility()?.hideRangeLabel,
         'paginator--hide-range-buttons': paginationVisibility()?.hideRangeButtons,
       }"
       [pageIndex]="pagination()?.pageIndex || 0"
-      [pageSize]="pagination()?.pageSize || resultsLength"
+      [pageSize]="pagination()?.pageSize || resultsLength()"
       [pageSizeOptions]="pageSizeOptions()"
       [showFirstLastButtons]="!paginationVisibility()?.hidePaginationFirstLastButtons"
       (page)="onChangePagination($event)">
