feat(llecoop/order-list/list): #429 add form to review user orders list and save it

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -60,6 +60,7 @@
   [actions]="tableDefinition.actions || {}"
   [noPagination]="tableDefinition.noPagination || false"
   [extraRowStyles]="tableDefinition.extraRowStyles"
+  [actionsColStyles]="tableDefinition.actionsColStyles || ''"
   (changeSorting)="onChangeSorting($event)"
   (delete)="onDelete($event)">
 </plastik-shared-table>
