--- a/libs/shared/form/ui/table/src/lib/input-table-type.component.html
+++ b/libs/shared/form/ui/table/src/lib/input-table-type.component.html
@@ -12,5 +12,6 @@
   [formControl]="formControl"
   [formlyAttributes]="field"
   [tableRowValueConditionFn]="props.tableRowValueConditionFn"
+  [tableNoPagination]="tableDefinition.noPagination || false"
   [label]="props.label || ''">
 </plastik-input-table>
