--- a/libs/shared/form/ui/table/src/lib/input-table.component.html
+++ b/libs/shared/form/ui/table/src/lib/input-table.component.html
@@ -11,5 +11,6 @@
   [paginationVisibility]="tablePaginationVisibility()"
   [actions]="tableActions()"
   [extraRowStyles]="tableExtraRowStyles()"
+  [noPagination]="tableNoPagination()"
   (getChangedData)="onGetChangedData($event)">
 </plastik-shared-table>
