--- a/apps/llecoop/src/styles/_theme.scss
+++ b/apps/llecoop/src/styles/_theme.scss
@@ -71,10 +71,9 @@
     --font-size-xxl: var(--h2);
 
     /* Table */
-    --plastik-mdc-table-row-min-height: 40px;
-    --plastik-mdc-table-row-max-height: 160px;
     --plastik-mdc-table-row-marked-ok-bg-color: var(--primary-100);
     --plastik-mdc-table-row-marked-ko-bg-color: var(--warn-100);
+    --plastik-mdc-table-row-marked-changed-bg-color: var(--accent-100);
 
     /* Form */
     --mat-form-field-container-text-line-height: 2.4;
