ci(llecoop): #434 add development hosting to firebase cloud

--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -23,7 +23,7 @@
     [data]="obs.data || []"
     [caption]="obs.tableDefinition.caption || ''"
     [columnProperties]="obs.tableDefinition.columnProperties || []"
-    [resultsLength]="obs.tableDefinition.count?.() || 0"
+    [resultsLength]="obs.tableDefinition.count() || 0"
     [pageSizeOptions]="obs.tableDefinition.pageSizeOptions || []"
     [pagination]="obs.tableDefinition.pagination"
     [paginationVisibility]="obs.tableDefinition.paginationVisibility"
