refactor(llecoop/product/list): #440 review product list styles

--- a/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
+++ b/libs/llecoop/order-list/feature/llecoop-order-indicator/src/lib/llecoop-order-indicator.component.html
@@ -1,23 +1,19 @@
-<button
-  mat-flat-button
-  color="accent"
-  class="text-white w-max m-tiny px-sub py-tiny"
->
-  <div class="flex flex-row items-center justify-center gap-sm">
-    <p class="hidden lg:block">
-      {{ orderListStore.currentOrder()?.name || 'Cap comanda oberta' }}
-    </p>
+@defer (when orderListStore.currentOrder()) {
+  <button mat-flat-button color="accent" class="text-white w-max m-tiny px-sub py-tiny">
+    <div class="flex flex-row items-center justify-center break-words gap-sm">
+      <span class="hidden md:flex">
+        {{ orderListStore.currentOrder()?.name }}
+      </span>
+      <span class="text-pretty">
+        {{ userOrderStore.openedOrder()?.totalPrice | currency: 'EUR' : 'symbol' : '2.2-2' }}
+      </span>
 
-    @if (orderListStore.currentOrder()) {
-    <p class="text-pretty">
-      {{ userOrderStore.openedOrder()?.totalPrice | currency: 'EUR' : 'symbol' : '2.2-2' }}
-    </p>
-
-    <mat-icon
-      matBadgeColor="warn"
-      aria-hidden="true"
-      [matBadge]="userOrderStore.openedOrder()?.cart?.length || 0"
-    >shopping_cart</mat-icon>
-    }
-  </div>
-</button>
+      <mat-icon
+        matBadgeColor="warn"
+        aria-hidden="true"
+        [matBadge]="userOrderStore.openedOrder()?.cart?.length || 0"
+        >shopping_cart</mat-icon
+      >
+    </div>
+  </button>
+}
