--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -27,7 +27,7 @@
     </button>
   }
 
-  <div class="flex justify-center text-base shared-form--extraLinks-container pt-sm">
+  <div class="flex justify-center pt-0 text-base shared-form--extraLinks-container md:pt-sm">
     <ng-content select=".extraLinks"></ng-content>
   </div>
 </form>
