--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -111,7 +111,7 @@
 </div>
 
 <ng-template #headerMenuTpl>
-  <button mat-button aria-label="header menu" [matMenuTriggerFor]="menu">
+  <button mat-button aria-label="header menu" class="flex gap-tiny" [matMenuTriggerFor]="menu">
     <span class="hidden sm:block">{{ headerMenu?.label() }}</span>
     <mat-icon class="w-[30px] h-[30px] text-[30px] m-0 p-0">account_circle</mat-icon>
   </button>
