--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -3,8 +3,7 @@
 @let tableDefinition = facade.tableDefinition();
 @let viewExtraActions = facade.viewExtraActions?.() || [];
 
-<div
-  class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
+<div class="flex flex-row flex-wrap items-center justify-center gap-sm sm:justify-between">
   <h2 class="flex items-center content-center h4 gap-sub">
     <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig?.icon }}</mat-icon>
     <span>{{ viewConfig?.title | titlecase }}</span>
